[package]
name = "kubectl-df-pv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.60.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_22"] }
tokio = { version = "1.0.1", features = ["full"] }
serde = "1.0.118"
serde_json = { version = "1.0.61", features = ["raw_value"] }
futures = "0.3.17"